Fixed: image fle upload visibility & zoom controls

--- a/css/chat.css
+++ b/css/chat.css
@@ -237,9 +237,7 @@ body {
   width: min-content;
   background: white;
 }
-.file-upload-item img {
-  width: 60px;
-}
+
 .file-upload-item button {
   background: none;
   border: none;
@@ -1003,7 +1001,7 @@ div.nano_start, div.nano_end {
 }
 
 .file-upload-item-img {
-  width: 40px;
+  width: 60px;
   height: auto;
 }
 
